*Empty MediaWiki Message*

--- a/პროგრამირების_ენა.mw
+++ b/პროგრამირების_ენა.mw
@@ -1,7 +1,53 @@
+
 * '''[[ბეისიკი]]'''
 * '''[[ც++]]'''
-* '''[[ბეისიკი]]'''
 * '''[[ვიზუალ ბეისიკი]]'''
 * '''[[ჯავა]]'''
 * '''[[ბეისიკი]]'''
 * '''[[დოსი]]'''
+
+{{კომპიუტერი}}
+[[კატეგორია:დაპროგრამების ენები]]
+
+{{Link FA|he}}
+{{Link FA|it}}
+{{Link FA|vi}}
+
+[[af:Programmeertaal]]
+[[ar:لغة برمجة]]
+[[bg:Език за програмиране]]
+[[ca:Llenguatge informàtic]]
+[[cs:Programování]]
+[[da:Programmeringssprog]]
+[[de:Programmiersprache]]
+[[en:Programming language]]
+[[et:Programmeerimiskeel]]
+[[el:Γλώσσα προγραμματισμού]]
+[[es:Lenguaje de programación]]
+[[eu:Programazio lengoaia]]
+[[eo:Programlingvo]]
+[[fr:Langage informatique]]
+[[hr:Programski jezik]]
+[[ia:Linguage de programmation]]
+[[id:Bahasa pemrograman]]
+[[it:Linguaggio di programmazione]]
+[[he:שפת תכנות]]
+[[lv:Programmēšanas valoda]]
+[[lt:Programavimo kalba]]
+[[hu:Programozási nyelv]]
+[[nl:Programmeertaal]]
+[[ja:プログラミング言語]]
+[[no:Programmeringsspråk]]
+[[pl:Język programowania]]
+[[pt:Linguagem de programação]]
+[[ro:Limbaj de programare]]
+[[ru:Язык программирования]]
+[[sk:Programovací jazyk]]
+[[sl:Programski jezik]]
+[[fi:Ohjelmointikieli]]
+[[sv:Programmeringsspråk]]
+[[tl:Wikang pangkompyuter]]
+[[th:ภาษาโปรแกรม]]
+[[vi:Ngôn ngữ lập trình]]
+[[tr:Programlama dilleri]]
+[[zh:程序设计语言]]
