*Empty MediaWiki Message*

--- a/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
+++ b/განათლების_ერთიანი_საკრედიტო_კავშირი.mw
@@ -1,6 +1,4 @@
-განათლების ერთიანი საკრედიტო კავშირი 
-
-განათლების ერთიანი საკრედიტო კავშირი 2006 წ. 24 თებერვლიდან, ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში.კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
+'''საქართველოს განათლების ერთიანი საკრედიტო კავშირი''' დაარსდა [[2006]] წ. [[24 თებერვალი|24 თებერვალს]] და ვითარდება არასაბანკო-სადეპოზიტო, სასესხო პროგრამის სახით განათლების სექტორში. კავშირი ეფუძნება კოოპერაციის პრინციპებს და აერთიანებს განათლებაზე მოტივირებულ ახალგაზრდებს, ასევე განათლების სექტორში დასაქმებულ ფიზიკურ პირებს (მზარდი რიცხოვნობით).
 
 მნიშვნელოვანი სასესხო-სარეზერვო ფონდები და მათი ზრდა განპირობებულია არა მარტო საწევრო და საპაიო შემონატანებით, არამედ მნიშვნელოვანი დახმარებებით პარტნიორი ორგანიზაციებიდან, საერთაშორისო ფონდებიდან, ისევე როგორც სხვადასხვა, საერთაშორისო განვითარების პროგრამებით.
 
@@ -20,4 +18,7 @@
 
 საკრედიტო კავშირი არის სახალხო ორგანიზაცია. იგი იღწვის მხოლოდ მისი წევრებისთვის. საკრედიტო კავშირი არის არა-პოლიტიკური და არა-რელიგიური ორგანიზაცია. აქ რეალიზდება მხოლოდ წევრთა ეკონომიკური უფლებები. საკრედიტო კავშირებისთვის დამაახასიათებელია საშემნახველო ანაბრების მაღალი დაცულობა, რომელიც მიიღწევა შესაბამისი სარეზერვო ფონდების ფორმირებით. პრინციპი ერთი ყველასათვის და ყველა ერთისათვის, საუკეთესოდ ასახავს საკრედიტო კავშირის იდეოლოგიას. თითოეულის მიერ მიღწეული შედეგი გუნდური გამარჯვებაა. აქ ნათლად ჩანს, რომ უდიდესი ძალა მართლაც ერთობაშია, რომელშიც იგულისხმება არა მარტო ფინანსური, არამედ პროფესიონალური, შრომითი და სხვა მნიშვნელოვანი რესურსების გაერთიანება.
 
-* [http://www.creditunion.ge დამატებითი ინფორმაცია მოიძიეთ]
+==რესურსები ინტერნეტში==
+* [http://www.creditunion.ge ოფიციალური ვებ-გვერდი]
+
+[[კატეგორია:განათლება]]
