--- a/გიორგი_მენაბდე.mw
+++ b/გიორგი_მენაბდე.mw
@@ -29,3 +29,4 @@
 პროფ. გიორგი მენაბდე 4 საავტორო უფლებისა და 50 სამეცნიერო ნაშრომის ავტორია.
 
 [[კატეგორია:ქართველები]]
+[[კატეგორია:ქართველი ქირურგები]]
