*Empty MediaWiki Message*

--- a/აახენი.mw
+++ b/აახენი.mw
@@ -3,7 +3,7 @@
 ! [[რუქა]]
 |- style="background: #ffffff; text-align: center;"
 | style="width: 145px;" | [[სურათი:Stadtwappen der kreisfreien Stadt Aachen.png|150px|]]
-| style="width: 145px;" | [[სურათი:Lage der kreisfreien Stadt Aachen in Deutschland.png|140px|Lage der kreisfreien Stadt Aachen in Deutschland]]
+| style="width: 145px;" | [[სურათი:Karte Aachen in Deutschland.png|140px|Lage der kreisfreien Stadt Aachen in Deutschland]]
 |-
 ! colspan="2" | სტატისტიკა
 |- bgcolor="#FFFFFF"
