--- a/კომპიუტერული_ტექნოლოგია.mw
+++ b/კომპიუტერული_ტექნოლოგია.mw
@@ -20,7 +20,7 @@
 ==სისტემური პროგრამები==
  
 :'''ოპერაციული სისტემები''':
-:[[MS DOS]] - [[GNU]] - [[JavaOS]] - [[Linux]] - [[Mac OS]] - [[OS/2]] - [[PalmOS]] - [[Unix]] - [[Windows]]
+:[[MS DOS]] - [[GNU]] - [[JavaOS]] - [[Linux]] - [[LiveCD]] - [[Mac OS]] - [[OS/2]] - [[PalmOS]] - [[Unix]] - [[Windows]]
 
 
 :'''პროგრამული და ოპერაციული გარსები''':
@@ -29,7 +29,6 @@
 
 :'''დამხმარე პროგრამები''' (უტილიტები):
 :[[ARJ]] - [[DeskLink]] - [[ICE]] - [[Norton BackUp]] - [[PKZIP]] - [[SpeedDisk]] - [[Stacker]]
-
 
 ==გამოყენებითი პროგრამები==
 
