--- a/კოლეჯი.mw
+++ b/კოლეჯი.mw
@@ -1,7 +1,7 @@
-ტერმინი '''კოლეჯი''' ([[ლათინური ენა|ლათ.]] collegium) ამჟამად ხშირად საგანმანათლებლო დაწესებულებაზე მიუთითებს. უფრო ვრცელი გაგებით, ეს შეიძლება იყო რაიმე პროფესიის კოლეგთა ჯგუფის სახელი (მაგ. საარჩევნო კოლეგია, სამხედრო კოლეგია, და ა.შ.). თავდაპირველად ის აღნიშნავდა საერთო კანონებით ერთად მცხოვრებ ადამიანთა ჯგუფს (con-, "ერთად" + leg-, "კანონი"). 
+'''კოლეჯი''' (''[[ლათინური ენა|ლათ.]]'' collegium) ამჟამად ხშირად საგანმანათლებლო დაწესებულებაზე მიუთითებს. უფრო ვრცელი გაგებით, ეს შეიძლება იყო რაიმე პროფესიის კოლეგთა ჯგუფის სახელი (მაგ. საარჩევნო კოლეგია, სამხედრო კოლეგია, და ა.შ.). თავდაპირველად ის აღნიშნავდა საერთო კანონებით ერთად მცხოვრებ ადამიანთა ჯგუფს (con-, "ერთად" + leg-, "კანონი"). 
 
 
-{{ესკიზი}}
+{{განათლება}}
 [[კატეგორია:ტერმინები]]
 [[კატეგორია:განათლება]]
 
