*Empty MediaWiki Message*

--- a/სიმონ_ხეჩინაშვილი.mw
+++ b/სიმონ_ხეჩინაშვილი.mw
@@ -1,5 +1,10 @@
 [[სურათი:khechinashvili.jpg|thumb|ხეჩინაშვილი სიმონ]]
-აკადემიკოსი, ყბა-სახის ქირურგი.
+'''სიმონ ნიკოლოზის ძე ხეჩინაშვილი''' (* [[26 ნოემბერი]], [[1919]], [[ქუთაისი]] ), [[ქართველები|ქართველი]] ოტორინოლარინგოლოგი, მედიცინის მეცნიერებათა დოქტორი (1952), პროფესორი (1953), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე (1965), სსრკ მედიცინის მეცნიერებათა აკადემიის აკადემიკოსი (1980). 
+
+
+==ბიოგრაფია==
+
+[[1941]] წელს დაამთავრა თბილისის სამედიცინო ინსტიტუტი. 
 
 
 
@@ -7,4 +12,5 @@
 
 
 [[კატეგორია:ქართველები]]
-[[კატეგორია:ქართველი ქირურგები]]
+[[კატეგორია:ქართველი მეცნიერები]]
+[[კატეგორია:დაბადებული  1919]]
