*Empty MediaWiki Message*

--- a/სიმონ_ხეჩინაშვილი.mw
+++ b/სიმონ_ხეჩინაშვილი.mw
@@ -1,10 +1,10 @@
 [[სურათი:khechinashvili.jpg|thumb|ხეჩინაშვილი სიმონ]]
-'''სიმონ ნიკოლოზის ძე ხეჩინაშვილი''' (* [[26 ნოემბერი]], [[1919]], [[ქუთაისი]] ), [[ქართველები|ქართველი]] ოტორინოლარინგოლოგი, მედიცინის მეცნიერებათა დოქტორი (1952), პროფესორი (1953), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე (1965), სსრკ მედიცინის მეცნიერებათა აკადემიის აკადემიკოსი (1980). 
+'''სიმონ ნიკოლოზის ძე ხეჩინაშვილი''' (* [[26 ნოემბერი]], [[1919]], [[ქუთაისი]] ), [[ქართველები|ქართველი]] [[ოტორინოლარინგოლოგია|ოტორინოლარინგოლოგი]], მედიცინის მეცნიერებათა დოქტორი (1952), პროფესორი (1953), საქართველოს მეცნიერებათა დამსახურებული მოღვაწე (1965), სსრკ მედიცინის მეცნიერებათა აკადემიის აკადემიკოსი (1980). 
 
 
 ==ბიოგრაფია==
 
-[[1941]] წელს დაამთავრა თბილისის სამედიცინო ინსტიტუტი. 
+[[1941]] წელს დაამთავრა [[თბილისის სამედიცინო ინსტიტუტი]]. 1942-1946 წლებში მუშაობდა თბილისის სამედიცინო ინსტიტუტის ოტორინოლარინგოლოგიურ კლინიკაში, 1947-1954 - საქართველოს მეცნიერებათა აკადემიის ფიზიოლოგიის ინსტიტუტში [[ბერიტაშვილი, ივანე|ი. ბერიტაშვილთან]].
 
 
 
