*Empty MediaWiki Message*

--- a/მედიცინა.mw
+++ b/მედიცინა.mw
@@ -33,8 +33,8 @@
 *[[პათოლოგია]] - შეისწავლის ავადმყოფობის პროცესებს 
 *[[პედიატრია]] - შეისწავლის ბავშვთა სნეულებებს
 *[[პროქტოლოგია]] - შეისწავლის ადამიანის უკანალის სნეულებებს და მათ მკურნალობას
-*[[რადიოლოგია]] - ????? 
-*[[რევმატოლოგია]] - ???????
+*[[რადიოლოგია]] - ????
+*[[რევმატოლოგია]] - შეისწავლის რევმატულ დაავადებათა მკურნალობისა და პროფილაქტიკის საკითხებს
 *[[საოჯახო მედიცინა]] - შეისწავლის ოჯახის ექიმების მომსახურეობას და მათი მომსახურეობის მეთოდებს
 *[[სექსოლოგია]] - შეისწავლის ადამიანის სექსუალური აღზრდის მეთოდებს
 *[[სტომატოლოგია]] - შეისწავლის პირის ღრუს და კბილების დაავადებებს
