--- a/1996.mw
+++ b/1996.mw
@@ -12,7 +12,7 @@
 
 ==გარდაიცვალნენ==
 *[[8 იანვარი]] : [[მიტერანი, ფრანსუა]] - [[საფრანგეთი|საფრანგეთის]] პრეზიდენტი [[1981]]-[[1995]] (დ.[[1916]])
-*[[20 თებერვალი]] : [[ტაკემიცუ ტორუ]] - [[იაპონელი]] კომპოზიტორი (დ.[[1930]])
+*[[20 თებერვალი]] : [[ტაკემიცუ ტორუ]] - იაპონელი კომპოზიტორი (დ.[[1930]])
 *[[3 მარტი]] : [[დიურას, მარგრიტ]] - ფრანგი მწერალი (დ.[[1914]])
 *[[22 აპრილი]] : [[დუდაევი, ჯოჰარ]] - ჩეჩნეთის პირველი პრეზიდენტი [[1991]]-1996 (დ.[[1944]])
 *[[15 ივნისი]] : [[ფიცჟერალდი, ელა]] - ამერიკელი მომღერალი (დ.[[1917]])
