*Empty MediaWiki Message*

--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -71,5 +71,8 @@ UNESCO
 
 აღსანიშნავია თსსუ-ის სტუდენტთა სპორტული მიღწევები. სტუდენტები აქტიურად მონაწილეობენ სხვადასხვა სახის ასპარეზობებში საქართველოსა თუ უცხოეთში.
 
+==რესურსები ინტერნეტში==
+[http://www.tsmu.edu/index.php თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი]
+
 [[კატეგორია:საქართველოს უნივერსიტეტები]]
 [[კატეგორია:განათლება]]
