--- a/მეორე_მსოფლიო_ომი.mw
+++ b/მეორე_მსოფლიო_ომი.mw
@@ -2,47 +2,46 @@
 [[სურათი:Second world war europe animation small.gif|thumb|250px|ომის მსვლელობა ევროპაში (ანიმაცია)]]
 '''მეორე მსოფლიო ომი''' ყველაზე მასშტაბური და სისხლისმღვრელი კონფლიქტი იყო კაცობრიობის ისტორიაში. 
 
-[[აზია|აზიაში]] ის დაიწყო [[მეორე იაპონია-ჩინეთის ომი|მეორე იაპონია-ჩინეთის ომით]] [[1937]] წლის [[7 ივლისი|7 ივლისს]] და [[ევროპა|ევროპაში]] [[გერმანია|გერმანიის]] თავდასხმით [[პოლონეთი|პოლონეთზე]] [[1939]] წლის [[1 სექტემბერი|1 სექტემბერს]]. საომარი მდგომარეობა ევროპაში დამთავრდა [[1945]] წლის [[8 მაისი|8 მაისის]] [[ვერმახტი|ვერმახტის]] კაპიტულაციით და აზიაში [[1945]] წლის [[2 სექტემბერი|2 სექტემბერს]] [[იაპონია|იაპონიის]] კაპიტულაციით.
+[[აზია|აზიაში]] ის დაიწყო [[მეორე იაპონია-ჩინეთის ომი|მეორე იაპონია-ჩინეთის ომით]] [[1937]] წლის [[7 ივლისი|7 ივლისს]] და [[ევროპა|ევროპაში]] [[გერმანია|გერმანიის]] თავდასხმით [[პოლონეთი|პოლონეთზე]] [[1939]] წლის [[1 სექტემბერი|1 სექტემბერს]]. საომარი მდგომარეობა ევროპაში დასრულდა [[1945]] წლის [[8 მაისი|8 მაისის]] [[ვერმახტი|ვერმახტის]] კაპიტულაციით, ხოლო აზიაში -- [[1945]] წლის [[2 სექტემბერი|2 სექტემბერს]] [[იაპონია|იაპონიის]] კაპიტულაციით.
 
 მეორე მსოფლიო ომის განმავლობაში გერმანია, [[იტალია]] და იაპონია აწარმოებდნენ დამპყრობლურ ომებს მსოფლიოს მრავალი ქვეყნის წინააღმდეგ. მათი მთავარი მოწინააღმდეგეები იყვნენ: [[საფრანგეთი]], [[დიდი ბრიტანეთი]] და [[ჩინეთის რესპუბლიკა]], [[რიბენტროპ-მოლოტოვის პაქტი|რიბენტროპ-მოლოტოვის პაქტის]] დარღვევის შემდეგ [[სსრკ|საბჭოთა კავშირი]] და იაპონიის [[პერლ-ჰარბორზე თავდასხმა|პერლ-ჰარბორზე თავდასხმის]] შემდეგ [[აშშ|ამერიკის შეერთებული შტატები]].
 
-მეორე მსოფლიო ომის ძირითადი ბრძოლის ადგილი იყო: აზია, [[წყნარი ოკეანე|წყნარი ოკეანის აუზი]], ევროპა და [[აფრიკა|ჩრდილოეთ აფრიკა]]. საომარი შეტაკებები მიმდინარეობდნენ აგრეთვე [[ჩრდილოეთი ამერიკა|ჩრდილოეთ ამერიკაში]] ''([[არქტიკა]])'' [[ალასკა|ალასკასა]] და [[გრენლანდია|გრენლანდიაზე]], ახლო აღმოსავლეთში - [[ერაყი|ერაყსა]] და [[ირანი|ირანში]], აღმოსავლეთ აფრიკაში - [[ეთიოპია|ეთიოპიასა]] და [[სომალი|სომალიში]], აგრეთვე [[სამხრეთი ამერიკა|სამხრეთ ამერიკაში]] ''( [[სურინამი|სურინამის]] დაპყრობა )'', [[ტიბეტი|ტიბეტში]] ''( ტოლსტოი-დოლანის მისია )'' და [[ანტარქტიდა|ანტარქტიდაზეც]] კი ''( ოპერაცია ტაბარინი )''.
+მეორე მსოფლიო ომის ძირითადი ბრძოლის ადგილი იყო: აზია, [[წყნარი ოკეანე|წყნარი ოკეანის აუზი]], ევროპა და [[აფრიკა|ჩრდილოეთ აფრიკა]]. საომარი შეტაკებები მიმდინარეობდა აგრეთვე [[ჩრდილოეთი ამერიკა|ჩრდილოეთ ამერიკაში]] ''([[არქტიკა]])'' [[ალასკა|ალასკასა]] და [[გრენლანდია|გრენლანდიაზე]], ახლო აღმოსავლეთში - [[ერაყი|ერაყსა]] და [[ირანი|ირანში]], აღმოსავლეთ აფრიკაში - [[ეთიოპია|ეთიოპიასა]] და [[სომალი|სომალიში]], აგრეთვე [[სამხრეთი ამერიკა|სამხრეთ ამერიკაში]] ''( [[სურინამი|სურინამის]] დაპყრობა )'', [[ტიბეტი|ტიბეტში]] ''(ტოლსტოი-დოლანის მისია)'' და [[ანტარქტიდა|ანტარქტიდაზეც]] კი ''(ოპერაცია ტაბარინი)''.
 
-მეორე მსოფლიო ომმა იმსხვერპლა [[მეორე მსოფლიო ომში დაღუპულები|60 მილიონამდე]] ადამიანის სიცოცხლე, დათ შორის 20 მილიონამდე მშვიდობიანი მოსახლის. ომის გაჟღენთილი იყო მძლავრი იდეოლოგიზმით, რამაც ურიცხვი [[სამხედრო დანაშაული]] და მშვიდობიან მსახლეობაზე სისტემატიური ძალადობა გამოიწვია, რომელიც ხშირად [[გენოციდი|გენოციდშიც]] კი გადაიზარდა.
+მეორე მსოფლიო ომმა იმსხვერპლა [[მეორე მსოფლიო ომში დაღუპულები|60 მილიონამდე]] ადამიანის სიცოცხლე, მათ შორის 20 მილიონამდე მშვიდობიანი მოსახლის. ომის სულისკვეთება გაჟღენთილი იყო მძლავრი იდეოლოგიზმით, რამაც ურიცხვი [[სამხედრო დანაშაული]] და მშვიდობიან მოსახლეობაზე სისტემატიური ძალადობა გამოიწვია, რომელიც [[გენოციდი|გენოციდშიც]] კი გადაიზარდა.
  
-
 
 ==ომისწინა პერიოდი==
 
 ===პოლიტიკური ვითარება===
 [[სურათი:WWIIPreHistory.png|thumb|right|250px|ომის წინა პერიოდი 1935-1939]]
 
-XX საუკუნის 20-იან და 30-იან წლებში ევროპის ბევრი სახელმწიფო ტოტალიტარული რეჟიმის მმართველობის ქვეშ აღმოჩნდა. [[1922]] წელს [[იტალია|იტალიის]] სათავეში [[მუსოლინი, ბენიტო|ბენიტო მუსოლინი]] და [[ფაშიზმი|ფაშისტური]] პარტია მოექცა. მათი ექსპანსიური საგარეო პოლიტიკის შედი იყო [[ეთიოპია|ეთიოპიის]] ([[1936]]) და [[ალბანეთი|ალბანეთის]] ([[1939]]) დაპყრობა იტალიის მიერ.
+XX საუკუნის 20-იან და 30-იან წლებში ევროპის ბევრი სახელმწიფო ტოტალიტარული რეჟიმის მმართველობის ქვეშ აღმოჩნდა. [[1922]] წელს [[იტალია|იტალიის]] სათავეში [[მუსოლინი, ბენიტო|ბენიტო მუსოლინი]] და [[ფაშიზმი|ფაშისტური]] პარტია მოექცა. მათი ექსპანსიური საგარეო პოლიტიკის შედეგი იყო [[ეთიოპია|ეთიოპიის]] ([[1936]]) და [[ალბანეთი|ალბანეთის]] ([[1939]]) დაპყრობა იტალიის მიერ.
 
 [[გერმანია|გერმანიაში]] ამ პერიოდში ძლიერდებოდა [[გერმანიის ნაციონალ-სოციალისტური მუშათა პარტია|ნაცისტური პარტია]], რომელმაც საბოლოო გამარჯვებას [[1933]] წლის არჩევნებში მიაღწია და პარტიის ლიდერი, [[ჰიტლერი, ადოლფ|ადოლფ ჰიტლერი]] გერმანიის [[კანცლერი]] გახდა. ჰიტლერის საგარეო პოლიტიკა მიმართული იყო ""[[ვერსალის ზავი|ვერსალის ზავის]]" წინააღმდეგ, მიზნად ისახავდა ე.წ. "[[გროსდოიჩე რაიხი|გროსდოიჩე რაიხის]]" შექმნას და "საარსებო გარემოს" მოპოვებას აღმოსავლეთში.
 
 [[ზაარლანდი|ზაარის მხარის]] ([[1935]]), [[რაინი(მდინარე)|რაინის ოლქის]] ([[1936]]), [[ავსტიის ანშლუსი|ავსტრიის]] ([[1938]]) და [[სუდეტები|სუდეტის მიწების]] ([[1938]]) მიერთებით ჰიტლერმა თავისი გეგმის პირველი ორი პუნქტი მეტ-ნაკლებად შეასრულა. [[დიდი ბრიტანეთი|ინგლისისა]] და [[საფრანგეთი|საფრანგეთის]] დათმობითმა პოლიტიკამ ყოველივე ამას დიდად შეუწყო ხელი. მაშინაც კი, როცა გერმანიამ [[ჩეხეთი]] მთლიანად შეიერთა ([[1939]] წლის ''მარტი'') ინგლისი და საფრანგეთი მხოლოდ პროტესტის ნოტით დაკმაყოფილდნენ. 
 
-ამ მოვლენებიდან მცირე ხნი შემდეგ [[ლიტვა|ლიტვამ]] გერმანიას დაუთმო [[მემელლანდი|მემელის მიწები]], [[სლოვაკეთი]] დამოუკიდებელი დარჩა, თუმცა გერმანიის პატრონაჟის ქვეშ. ძნელი მისახვედრი არ იყო რომ ამ ქვეყნების შემდეგ ჯერი [[პოლონეთი|პოლონეთზე]] მიდგებოდა. ამის საწინააღმდეგოდ პოლონეთის, საფრანგეთის და ინგლისის მთავრობებმა ხელი მოაწერეს ურთიერთდახმარების ხელშეკრულებას.
+ამ მოვლენებიდან მცირე ხნის შემდეგ [[ლიტვა|ლიტვამ]] გერმანიას დაუთმო [[მემელლანდი|მემელის მიწები]], [[სლოვაკეთი]] დამოუკიდებელი დარჩა, თუმცა გერმანიის პატრონაჟის ქვეშ. ძნელი მისახვედრი არ იყო რომ ამ ქვეყნების შემდეგ ჯერი [[პოლონეთი|პოლონეთზე]] მიდგებოდა. ამის საწინააღმდეგოდ პოლონეთის, საფრანგეთის და ინგლისის მთავრობებმა ხელი მოაწერეს ურთიერთდახმარების ხელშეკრულებას.
 
-[[1939]] წლის ''აგვისტოში'' ყველასთვის მოულოდნელად გერმანიამ და [[სსრკ]]-მა ხელი მოაწერეს "ურთიერთთავდაუსხმელობის პაქტს" ''(ე.წ. "[[რიბენტროპ-მოლოტოვის პაქტი]]")'', რომლის საიდუმლო დამატებით პროტოკოლში ზუსტად იყო განსაზღვრული ამ ორი ქვეყნის ტერიტორიული ამბიციები აღ. ევროპის დაპპყრობის შემთხევევაში. პოლონეთი გერმანიასა და სსრკ-ს შორის უნდა გაყოფილიყო, ხოლო [[ბალტიის ქვეყნები]] და [[ფინეთი]] სსრკ-ს "ინტერესების სფეროდ" ცხადდებოდა.
+[[1939]] წლის ''აგვისტოში'' ყველასთვის მოულოდნელად გერმანიამ და [[სსრკ]]-მა ხელი მოაწერეს "ურთიერთთავდაუსხმელობის პაქტს" ''(ე.წ. "[[რიბენტროპ-მოლოტოვის პაქტი]]")'', რომლის საიდუმლო დამატებით პროტოკოლში ზუსტად იყო განსაზღვრული ამ ორი ქვეყნის ტერიტორიული ამბიციები აღმ. ევროპის დაპყრობის შემთხევევაში. პოლონეთი გერმანიასა და სსრკ-ს შორის უნდა გაყოფილიყო, ხოლო [[ბალტიის ქვეყნები]] და [[ფინეთი]] სსრკ-ს "ინტერესების სფეროდ" ცხადდებოდა.
 
 [[იაპონია|იაპონიის]] ექსპანსიური პოლიტიკა XX ს-ის 30-იან წლებში დაიწყო. უმთავრესი ინტერესი [[ჩინეთის რესპუბლიკა]] იყო, რომლის ჩრდილოეთი რეგიონი, [[მანჯურია]], [[1931]] იაპონიის მიერ იქნა ანექსირებული და [[მანჯოუ-გო]]-ს პროტექტორატის სახელით მისი გავლენის ქვეშ იმყოფებოდა. საერთაშორისო პროტესტის გამო იაპონიამ დატოვა "[[ერთა ლიგა]]" [[1933]] წელს და [[1936]] წელს შეუერთდა "[[ანტიკომინტერნის პაქტი|ანტიკომინტერნის პაქტს]]". 
 
-[[1937]] წელს დაიწყო [[მეორე იაპონია-ჩინეთის ომი]]. მეორე მსოფლიო ომის დაწყებამ ევროპაში საბაბი მისცა მას დაეპყრო [[ინდოჩინეთი]]. ამის საპასუხოდ [[აშშ]]-მა და დიდმა ბრიტანეთმა იაპონიას [[ემბარგო]] დაადეს და შეუწყვიტეს ფინანსური დახმარებები. [[1940]] წელს იაპონია შეუერთდა "[[ბერლინი-რომი-ტოკიოს პაქტი|ბერლინი-რომის პაქტს]]". ემბარგოს გამო იაპონიის ეკონომიკა რესურსების დიდ ნაკლებობას განიცდიდა და იმპერატორის სამხედრო წრე ერთადერთ გამოსავალს ამ კრიზისიდან აშშ-ს და ბრიტანეთის წინააღმდეგ ომში ხედავდა.
+[[1937]] წელს დაიწყო [[მეორე იაპონია-ჩინეთის ომი]]. მეორე მსოფლიო ომის დაწყებამ ევროპაში მას საბაბი მისცა [[ინდოჩინეთი]] დაეპყრო. ამის საპასუხოდ [[აშშ]]-მა და დიდმა ბრიტანეთმა იაპონიას [[ემბარგო]] დაადეს და შეუწყვიტეს ფინანსური დახმარებები. [[1940]] წელს იაპონია შეუერთდა "[[ბერლინი-რომი-ტოკიოს პაქტი|ბერლინი-რომის პაქტს]]". ემბარგოს გამო იაპონიის ეკონომიკა რესურსების დიდ ნაკლებობას განიცდიდა და იმპერატორის სამხედრო წრე ერთადერთ გამოსავალს ამ კრიზისიდან აშშ-ს და ბრიტანეთის წინააღმდეგ ომში ხედავდა.
 
 ===ომის მიზნები===
 
 მეორე მსოფლიო ომი ევროპაში იყო [[გერმანია|გერმანიის]] მიერ წამოწყებული დამპყრობლური და გამანადგურებელი ომი აღმოსავლეთში "საარსებო გარემოს" ''([[გერმ.]] „Lebensraum“)'' მოპოვების მიზნით. გერმანიის საგარეო პოლიტიკის სავარაუდო სქემის ძირითადი კომპონენტები იყო:
-* კავშირი [[იტალია|იტალიასთან]] და [[იაპონია|იაპონიასთან]]
-* ბრძოლა გერმანიისათვის გამანადგურებელი შედეგების მომტან ე.წ. "ებრაულ მსოფლიო შეთქმულების" წინააღმდეგ
-* ანტიბოლშევისტური გამანადგურებელი ბრძოლა აღმოსავლეთში "საარსებო გარემოს" მოპოვებისათვის და დაპყრობილი ტერიტორიების გერმანელებით დასახლება
+* კავშირი [[იტალია|იტალიასთან]] და [[იაპონია|იაპონიასთან]];
+* ბრძოლა გერმანიისთვის გამანადგურებელი შედეგების მომტან ე.წ. "ებრაულ მსოფლიო შეთქმულების" წინააღმდეგ;
+* ანტიბოლშევისტური გამანადგურებელი ბრძოლა აღმოსავლეთში "საარსებო გარემოს" მოპოვებისათვის და დაპყრობილი ტერიტორიების გერმანელებით დასახლება.
 
 გერმანიის საბოლოო მიზანი იყო მსოფლიოში გაბატონებული პოზიციის მოპოვება. ''"გერმანია იქნება მსოფლიოში გაბატონებული ძალა ან საერთოდ არაფერი არ იქნება"'' წერდა [[ჰიტლერი, ადოლფ|ჰიტლერი]] თავის წიგნში "[[მაინ კამპფი]]".
 
 დაპყრობილი [[სსრკ|საბჭოთა კავშირი]] უნდა დაყოფილიყო სხვადასხვა ოლქებად [[რაიხსკომისარი|რაიხსკომისრების]] მმართველობის ქვეშ. აქედან ბელორუსები, უკრაინელები და ბალტიისპირეთის ხალხები "საარსებოდ ვარგისად", ხოლო რუსები კი "დაბალ რასად" იქნენ შეფასებულნი. დაპყრობილი აღმოსავლეთ ევროპა დასახლებული უნდა ყოფილიყო გერმანელი გლეხებით და ჯარისკაცებით, ე.წ. "შეიარაღებული გლეხებით" ''([[გერმ.]] "Wehrbauern")''. [[ნაციზმი|ნაცისტური]] ელიტის განზრახვით აღმოსავლეთ ევროპის ხალხები, მათი სამოქალაქო ელიტის განადგურების შემდეგ, უნდა დარჩენილიყვნენ "გაუნათლებლები, მორჩილნი და გამრჯე" და უმუშავათ გერმანიისათვის.
 
-[[1933]] წლამდე ეს იდეები ანგარიშში სერიოზულად არავის ჩაუგდია, თუმცა ჰიტლერის პოლიტიკა სხვა არაფერი იყო თუ არა ამ გეგმის ეტაპობრივი განხორციელება. [[1936]] წლის აგვისტოში მიღებული "ოთხწლიანია გეგმა" ითვალისწინებდა გერმანიის არმიის და ეკონომიკის საბრძოლო ვითარებისათვის მომზადებას ორი განსხვავებული ვარიანტისათვის: 1) [[1941]]-[[1942]] წ.წ. - გერმანიისათვის პოლიტიკური და სამხედრო თვალსაზრისით არახელსაყრელი ვარიანტი. 2) [[1944]]-[[1945]] წ.წ. - შედარებით ხელსაყრელი ვარიანტი.
+[[1933]] წლამდე ეს იდეები ანგარიშში სერიოზულად არავის ჩაუგდია, თუმცა ჰიტლერის პოლიტიკა სხვა არაფერი იყო თუ არა ამ გეგმის ეტაპობრივი განხორციელება. [[1936]] წლის აგვისტოში მიღებული "ოთხწლიანი გეგმა" ითვალისწინებდა გერმანიის არმიის და ეკონომიკის საბრძოლო ვითარებისათვის მომზადებას ორი განსხვავებული ვარიანტისათვის: 1) [[1941]]-[[1942]] წ.წ. - გერმანიისათვის პოლიტიკური და სამხედრო თვალსაზრისით არახელსაყრელი ვარიანტი. 2) [[1944]]-[[1945]] წ.წ. - შედარებით ხელსაყრელი ვარიანტი.
 
 [[1937]] წლის [[5 ნოემბერი|5 ნოემბერს]] ჰიტლერმა თავისი გეგემები დაწვრილებით და დაზუსტებით წარუდგინა [[ვერმახტი|ვერმახტის]] გენერალიტეტს ''"(იხ. "[[ჰოსბახის პროტოკოლი]]")''.
 
@@ -52,24 +51,24 @@ XX საუკუნის 20-იან და 30-იან წლებში 
 ===გერმანიის თავდასხმა პოლონეთზე (1939)===
 [[სურათი:polonetzetavdasxma.png|thumb|250px|პოლონეთის კამპანია]]
 
-მეორე მსოფლიო ომი ევროპაში დაიწყო გერმანიამ [[1939]] წლის [[1 სექტემბერი|1 სექტემბერს]] 4 საათსა და 45 წუთზე [[ვერმახტის|ვერმახტის]] [[პოლონეთი|პოლონეთზე]] თავდასხმით. თავდასხმის გამართლების მიზნით გერმანულმა მხარემ მოაწყო რამდენიმე ინციდენტი. ყველაზე ცნობილი მათ შორის იყო პოლონური სამხედრო ფორმებში გამოწყობილი "[[სს]]"-ის წევრების თავდასხმა [[31 აგვისტო|31 აგვისტოს]] რადიოსადგულ [[გლაივიცი|გლაივიცზე]], რომლის დროსაც მათ პოლონურ ენაზე ეთერში გადასცეს პოლონეთის მიერ გერმანიისადმი ომის გამოცხადების ცნობა. 
+მეორე მსოფლიო ომი ევროპაში გერმანიამ დაიწყო [[1939]] წლის [[1 სექტემბერი|1 სექტემბერს]] 4 საათსა და 45 წუთზე [[ვერმახტის|ვერმახტის]] [[პოლონეთი|პოლონეთზე]] თავდასხმით. თავდასხმის გამართლების მიზნით გერმანულმა მხარემ მოაწყო რამდენიმე ინციდენტი. ყველაზე ცნობილი მათ შორის იყო პოლონურ სამხედრო ფორმებში გამოწყობილი "[[სს]]"-ის წევრების თავდასხმა [[31 აგვისტო|31 აგვისტოს]] რადიოსადგურ [[გლაივიცი|გლაივიცზე]], რომლის დროსაც მათ პოლონურ ენაზე ეთერში გადასცეს პოლონეთის მიერ გერმანიისადმი ომის გამოცხადების ცნობა. 
 
-ომის პირველი გასროლა მოახდინა გერმანულმა სასწავლო გემმა "[[შლეზვიგ-ჰოლშტაინი(გემი)|შლეზვიგ-ჰოლშტაინმა]]". პოლონური არმია რიცხობრივად თანაბარი იყო ვერმახტის, თუმცა ტექნიკური და საბრძოლო ტაქტიკის მხრივ დიდად ჩამორჩებოდა თავდამსხმელებს. პოლონეთის მთავრობა დიდ იმედებს ამყარებდა [[საფრანგეთი|საფრანგეთის]] და [[დიდი ბრიტანეთი|დიდი ბრიტანეთის]] სამხედრო დახმარებაზე, რომელებთანაც მას ე.წ. "გარანტიის პაქტი" ჰქონდა დადებული [[1939]] წლის [[30 მარტი|30 მარტს]]. ბრიტანეთმა და საფრანგეთმა [[3 სექტემბერი|3 სექტემბერს]] ულტიმატუმი წაუყენეს გერმანიას და მოთხოვეს ჯარების დაუყოვნებლივი გამოყვანა პოლონეთის ტერიტორიიდან. "გარანტიის პაქტის" მიხედვით ინგლის-საფრანგეთს ულტიმატუმის შეუსრულებლობის პირობებში სამხედრო მოქმედებები უნდა დაეწყოთ არაუგვიანეს 15 დღისა. [[ჰიტლერი, ადოლფ|ჰიტლერი]] იმედოვნებდა, რომ დასავლეთის სახელმწიფოები ისეთივე ნეიტრალურ პოზიციას დაიკავებდნენ პოლონეთის მიმართ, როგორიც ეკავათ გერმანიის მიერ [[ჩეხოსლოვაკია|ჩეხოსლოვაკიის]] დაპყრობის და [[ავსტიის ანშლუსი|ავსტიის  აშლუსის]] დროს. გერმანიაზე თავდასხმას ადგილი არ ჰქონია, მიხედავად იმისა რომ პოლონეთის ორივე მოკავშირემ - ინგლისმა და საფრანგეთმა გერმანიას ომი გამოუცხადა.
+ომის პირველი გასროლა მოახდინა გერმანულმა სასწავლო გემმა "[[შლეზვიგ-ჰოლშტაინი(გემი) | შლეზვიგ-ჰოლშტაინმა]]". პოლონური არმია რიცხობრივად თანაბარი იყო ვერმახტის, თუმცა ტექნიკური და საბრძოლო ტაქტიკის მხრივ დიდად ჩამორჩებოდა თავდამსხმელებს. პოლონეთის მთავრობა დიდ იმედებს ამყარებდა [[საფრანგეთი|საფრანგეთის]] და [[დიდი ბრიტანეთი|დიდი ბრიტანეთის]] სამხედრო დახმარებაზე, რომელებთანაც მას ე.წ. "გარანტიის პაქტი" ჰქონდა დადებული [[1939]] წლის [[30 მარტი|30 მარტს]]. ბრიტანეთმა და საფრანგეთმა [[3 სექტემბერი|3 სექტემბერს]] ულტიმატუმი წაუყენეს გერმანიას და მოსთხოვეს ჯარების დაუყოვნებლივი გამოყვანა პოლონეთის ტერიტორიიდან. "გარანტიის პაქტის" მიხედვით ინგლის-საფრანგეთს ულტიმატუმის შეუსრულებლობის პირობებში სამხედრო მოქმედებები უნდა დაეწყოთ არაუგვიანეს 15 დღისა. [[ჰიტლერი, ადოლფ|ჰიტლერი]] იმედოვნებდა, რომ დასავლეთის სახელმწიფოები ისეთივე ნეიტრალურ პოზიციას დაიკავებდნენ პოლონეთის მიმართ, როგორიც ეკავათ გერმანიის მიერ [[ჩეხოსლოვაკია|ჩეხოსლოვაკიის]] დაპყრობის და [[ავსტიის ანშლუსი|ავსტიის  აშლუსის]] დროს. გერმანიაზე თავდასხმას ადგილი არ ჰქონია, მიხედავად იმისა რომ პოლონეთის ორივე მოკავშირემ - ინგლისმა და საფრანგეთმა გერმანიას ომი გამოუცხადა.
 
 [[17 სექტემბერი|17 სექტემბერს]] პოლონეთის იმედებს წერტილი დაესვა. [[რიბენტროპ-მოლოტოვის პაქტი|რიბენტროპ-მოლოტოვის პაქტის]] საიდუმლო დამატებითი პროტოკოლის შესაბამისად [[წითელი არმია|წითელმა არმიამ]] მოახდინა პოლონეთის აღმოსავლეთი ნაწილის ოკუპაცია. მიუხედავად ამ ძალადობრივი ფაქტისა ამჯერად ინგლისს და საფრანგეთს [[სსრკ|საბჭოთა კავშირისათვის]] ომი არ გამოუცხადებიათ. იმავე დღეს პოლონეთის მთავრობამ დატოვა ქვეყანა და [[რუმინეთი|რუმინეთს]] შეაფარა თავი. პოლონეთის სამხედრო მარცხი გარდაუვალი იყო.
 
-[[28 სექტემბერი|28 სექტემბერს]] დაეცა პოლონეთის დედაქალაქი [[ვარშავა]], რომელიც [[18 სექტემბერი|18 სექტემბრის]] შემდეგ ვერმახტის ალყაში იყო და განუწყვეტლივ იბომბებოდა. [[29 სექტემბერი|29 სექტემბერს]] გერმანელებმა აიღეს მოდინის ციხესიმაგრეც.
+[[28 სექტემბერი|28 სექტემბერს]] დაეცა პოლონეთის დედაქალაქი [[ვარშავა]], რომელიც [[18 სექტემბერი|18 სექტემბრის]] შემდეგ ვერმახტის ალყაში იყო და განუწყვეტლივ იბომბებოდა. [[29 სექტემბერი|29 სექტემბერს]] გერმანელებმა აიღეს [[მოდინის ციხესიმაგრე|მოდინის ციხესიმაგრეც]].
 
 [[image:WWII_Poland_Invasion_1939-09-01.jpg||180px|thumb|left|პოლონეთზე თავდასხმა]]
 [[8 ოქომბერი|8 ოქტომბერს]] [[ბრესტ-ლიტოვსკი|ბრესტ-ლიტოვსკის]] შეთანხმების თანახმად პოლონეთი სადემარკაციო ხაზის საშუალებით გაიყვეს გერმანიამ და სსრკ-მა. გერმანიამ არა მარტო [[ვერსალის ზავი(1918)|ვერსალის ზავით]] დაკარგული ტერიტორიები დაიბრუნა, არამედ [[მესამე რაიხი|მესამე რაიხის]] შემადგენლობაში შევიდა თითქმის მთელი ცენტრალური პოლონეთი ქ. [[ლოძი|ლოძთან]] ერთად. პოლონეთის დანარჩენ ტერიტორიაზე დაარსებულ იქნა [[გენერალ-გუბერნია]].
 
-პოლონეთის დაპყრობას საშინელი შედეგი მოჰყვა მშვიდობიანი მოსახლეობისადმი. უფასო მუშახელის იძულებით სამუშაობზე დეპორტირება ყოველდღიურ მოვლენად იქცა. განსაკუთრებით დაზარალდა პოლონეთის ებრაული მოსახლეობა, რომელთა განადგურებაც გერმანული რასიზმის უმაღლეს მიზანს წარმოადგენდა. იდენტურ "გენოციდს" "კლასობრივი მტრების" წინააღმდეგ აღმოსავლეთ პოლონეთში აწარმოებდა სსრკ-ც.
+პოლონეთის დაპყრობას საშინელი შედეგი მოჰყვა მშვიდობიანი მოსახლეობისათვის. უფასო მუშახელის იძულებით სამუშაობზე დეპორტირება ყოველდღიურ მოვლენად იქცა. განსაკუთრებით დაზარალდა პოლონეთის ებრაული მოსახლეობა, რომელთა განადგურებაც გერმანული რასიზმის უმაღლეს მიზანს წარმოადგენდა. იდენტურ "გენოციდს" "კლასობრივი მტრების" წინააღმდეგ აღმოსავლეთ პოლონეთში აწარმოებდა სსრკ-ც.
 
-პოლონეთზე სწრაფი სამხედრო გამარჯვების შემდეგ დამკვიდრდა ტერმინი "ევლისებური ომი" - იგივე "[[ბლიცკრიგი]]" ''([[გერმ.]] Blitzkrieg)'' და იგი გერმანიის სამხედრო ტაკქტიკის განუყოფელ ნაწილად იქცა [[1941]] წლის მიწურულამდე.
+პოლონეთზე სწრაფი სამხედრო გამარჯვების შემდეგ დამკვიდრდა ტერმინი "ელვისებური ომი" - იგივე "[[ბლიცკრიგი]]" ''([[გერმ.]] Blitzkrieg)'' და იგი გერმანიის სამხედრო ტაკქტიკის განუყოფელ ნაწილად იქცა [[1941]] წლის მიწურულამდე.
 
 ===პოზიციური ომი დასავლეთ ფრონტზე (1939)=== 
 
-[[1939]] წლის [[3 სექტემბერი|3 სექტემბერს]] [[საფრანგეთი|საფრანგეთმა]] და [[დიდი ბრიტანეთი|დიდმა ბრიტანეთმა]] ომი გამოუცხადეს [[გერმანია|გერმანიას]]. ამ მიზეზით საფრანგეთმა [[5 სექტემბერი|5 სექტემბერს]] დაიწყო შეზღუდული, უფრო სწორად სიმბოლური შეტევა [[ზაარლანდი|ზაარის მხარეზე]]. გერმანელბმა ყოველგვარი წინააღმდეგობის გარეშე დაიხიეს უკან, გამაგრებული "დასავლეთის კედლის" ''(სამხედრო სიმაგრათა ხაზი)'' უკან. ამის შემდეგ, თუ მხედველობაში არ მივიღებთ ცალკეულ საარტილერიო გასროლებს, საომარ მოქმედებებს დასავლეთის ფრონტზე ადგილი არ ჰქონიათ. ომის ეს ფაზა ცნობილია "მჯდომარე ომის" სახელით. გერმანიის მხრიდან ადგილი ჰქონდა პროპაგანდისტულ "თავდასხმებს" საფრანგეთის არმიაზე. პლაკატებითა და მეგაფონებით "შეიარარებული" ვერმახტის კარისკაცები მიმართავდნენ ფრანგებს: "რატომ იბრძვით?" ან "ჩვენ პირველები არ გავისვრით" და ა.შ.
+[[1939]] წლის [[3 სექტემბერი|3 სექტემბერს]] [[საფრანგეთი|საფრანგეთმა]] და [[დიდი ბრიტანეთი|დიდმა ბრიტანეთმა]] ომი გამოუცხადეს [[გერმანია|გერმანიას]]. ამ მიზეზით საფრანგეთმა [[5 სექტემბერი|5 სექტემბერს]] დაიწყო შეზღუდული, უფრო სწორად სიმბოლური შეტევა [[ზაარლანდი|ზაარის მხარეზე]]. გერმანელბმა ყოველგვარი წინააღმდეგობის გარეშე დაიხიეს უკან, გამაგრებული "დასავლეთის კედლის" ''(სამხედრო სიმაგრათა ხაზი)'' უკან. ამის შემდეგ, თუ მხედველობაში არ მივიღებთ ცალკეულ საარტილერიო გასროლებს, საომარ მოქმედებებს დასავლეთის ფრონტზე ადგილი არ ჰქონია. ომის ეს ფაზა ცნობილია "მჯდომარე ომის" სახელით. გერმანიის მხრიდან ადგილი ჰქონდა პროპაგანდისტულ "თავდასხმებს" საფრანგეთის არმიაზე. პლაკატებითა და მეგაფონებით "შეიარაღებული" ვერმახტის კარისკაცები მიმართავდნენ ფრანგებს: "რატომ იბრძვით?" ან "ჩვენ პირველები არ გავისვრით" და ა.შ.
 
 [[27 სექტემბერი|27 სექტემბერს]] [[ჰიტლერი, ადოლფ|ჰიტლერმა]] უბრძანა [[სახმელეთო ჯარების უმაღლესი მთავარსარდლობა|სახმელეთო ჯარების უმაღლესი მთავარსარდლობას]] ("OKH") შეემუშავებინათ თავდასხმითი გეგმა, ე.წ. "ყვითელი შემთხვევა" ''([[გერმ.]] „Fall Gelb“)''. [[29 ოქტომბერი|29 ოქტომბერს]] გეგმა უკვე მზად იყო. იგი მიზნად ისახავდა 2 არმიით [[ბელგია|ბელგიისა]] და [[ნიდერლანდი|ნიდერლანდების]] გავლით [[მოკავშირეები|მოკავშირეთა]] ჯარებზე თავდასხმას და მათ განადგურებას მდ. [[სომი(მდინარე)|სომის]] ჩრდილოეთით.
 
@@ -79,7 +78,7 @@ XX საუკუნის 20-იან და 30-იან წლებში 
 
 [[1939]] წლის [[30 ნოემბერი|30 ნოემბერს]] [[წითელი არმია|წითელმა არმიამ]] [[მარშალი|მარშალ]] [[მერეცკოვი, კირილ|კირილ მერეცკოვის]] მეთაურობით გადალახა [[ფინეთი|ფინეთის]] საზღვარი 950 კმ-ის სიგანეზე. 1.500 [[ტანკი|ტანკითა]] და 3.000 [[თვითმფრინავი|თვითმფრინავით]] შეარაღებული წითელი არმია სწრაფ გამარჯვებას ელოდა, მაგრამ ფინელებმა შეუპოვარი წინააღმდეგობა გაუწიეს თავდამსხმელებს და დიდი ზიანი მიაყენეს. წითელმა არმიამ 200.000-მდე ჯარისკაცი დაკარგა, მაშინ როცა ფინეთის დანაკარგი 25.000-ს არ აღემატებოდა.
 
-ამ ომში ფინეთს ფარულად სამხედრო დახმარებას უწევდა [[შვეცია]], ისე რომ მის მიერვე გამოცხადებული საერთაშორისო ნეიტრალიტეტი არ დაერღვია. ფინეთს საომარ მხარდაჭერას პირდებოდნენ [[დიდი ბრიტანეთი]] და [[საფრანგეთი]], მაგრამ საქმე აქამდე არ მისულა. [[1940]] წლის [[12 მარტი|12 მარტს]] ფინეთსა და საბჭოთა კავშირს შორის ხელი მოეწერა საზავო ხელშეკრულებას, რომლის ძალითაც [[კარელია|კარელიის]] ნაწილი და ნახევარკუნძული [[პეჩენგა|კალასტაიანსაარენტო]] ''(დღ. პეჩენგა)'' გადაეცა [[სსრკ]]-ს. დაკარგული ტერიტორიების დაბრუნების მიზნით ფინეთმა [[1941]] წელს, საბჭოთა კავშირზე [[გერმანია|გერმანიის]] თავდასხმის შემდეგ, [[სსრკ]]-თან საომარი მოქმედებები განაახლა.
+ამ ომში ფინეთს ფარულად სამხედრო დახმარებას უწევდა [[შვედეთი]], ისე რომ მის მიერვე გამოცხადებული საერთაშორისო ნეიტრალიტეტი არ დაერღვია. ფინეთს საომარ მხარდაჭერას ჰპირდებოდნენ [[დიდი ბრიტანეთი]] და [[საფრანგეთი]], მაგრამ საქმე აქამდე არ მისულა. [[1940]] წლის [[12 მარტი|12 მარტს]] ფინეთსა და საბჭოთა კავშირს შორის ხელი მოეწერა საზაო ხელშეკრულებას, რომლის ძალითაც [[კარელია|კარელიის]] ნაწილი და ნახევარკუნძული [[პეჩენგა|კალასტაიანსაარენტო]] ''(დღ. პეჩენგა)'' [[სსრკ]]-ს გადაეცა. დაკარგული ტერიტორიების დაბრუნების მიზნით ფინეთმა [[1941]] წელს, საბჭოთა კავშირზე [[გერმანია|გერმანიის]] თავდასხმის შემდეგ, [[სსრკ]]-თან საომარი მოქმედებები განაახლა.
 
 ===დანიისა და ნორვეგიის დაპყრობა (1940)===
 
