--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -1,17 +1,29 @@
 [[სურათი:tsmuview2.jpg|thumb|თბილისის სახელწიფო სამედიცინო უნივერსიტეტი]]
 '''თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი''' საქართველოში უმაღლესი სამედიცინო განათლებისა  და მეცნიერების უმთავრესი კერაა.  აქ თავმოყრილია საქართველოს სამედიცინო პედაგოგიური და  და სამეცნიერო კადრების საუკეთესო ნაწილი. 
 
-თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში [[ინსტიტუტი]]),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში [[ქართული საზოგადოების გამოჩენილი მოღვაწეები]] იდგნენ: [[ჯავახიშვილი, ივანე ]], [[ცხვედაძე, ნიკო ]], [[მელიქიშვილი, პეტრე]], [[თაყაიშვილი, ექვთიმე]], [[კეკელიძე, კორნელი]], [[შანიძე, აკაკი]] [[და სხვა]]. 
+თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში [[ინსტიტუტი]]),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში [[ქართული საზოგადოების გამოჩენილი მოღვაწეები]] იდგნენ: [[ჯავახიშვილი, ივანე|ივანე ჯავახიშვილი]], [[ცხვედაძე, ნიკო|ნიკო ცხვედაძე]], [[მელიქიშვილი, პეტრე|პეტრე მელიქიშვილი]], [[თაყაიშვილი, ექვთიმე|ექვთიმე თაყაიშვილი]], [[კეკელიძე, კორნელი|კორნელი კეკელიძე]], [[შანიძე, აკაკი|აკაკი შანიძე]] [[და სხვა]]. 
 
 ==ისტორია==
 [[სურათი:univer_old.jpg|thumb|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
-[[1918]] წლის [[27 თებერვალი|27 თებერვალს]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ "[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ|სპირიდონ ვირსალაძის]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რომ სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი ცალკეულ ფაკულტეტებად გაიყო.
+[[1918]] წლის [[27 თებერვალი|27 თებერვალს]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ "[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ|სპირიდონ ვირსალაძის]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რათა სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი ცალკე ფაკულტეტებად გაიყო.
 
-წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
+წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა ''საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი''. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
 
-დღეისათვის, [[თსსუ]]-ში შემდეგი ფაკულტეტებია: [[სამკურნალო]] ([[ქართული]], [[რუსული]], [[ინგლისური]] სექტორები) [[პედიატრიული]], საზოგადოებრივი ჯანდაცვისა და მენეჯმენტის, [[სტომატოლოგიური]], [[ფარმაცევტული]], ფსიქოთერაპიისა და ფსიქოსომატური მედიცინის, უცხო ენების ([[ინგლისური]], [[გერმანული]], [[ფრანგული]] [[ენები]]). 
+==ორგანიზაცია==
+დღეისათვის, [[თსსუ]]-ში შემდეგი ფაკულტეტებია: [[სამკურნალო]] ([[ქართული]], [[რუსული]], [[ინგლისური]] სექტორები) [[პედიატრიული]], საზოგადოებრივი ჯანდაცვისა და მენეჯმენტის, [[სტომატოლოგიური]], [[ფარმაცევტული]], ფსიქოთერაპიისა და ფსიქოსომატური მედიცინის, უცხო ენების ([[ინგლისური]], [[გერმანული]], [[ფრანგული]] [[ენები]]).
 
-თსსუ-ს  გაფორმებული აქვს ხელშეკრულებები, სხავადასხვა ქვეყნის 30-ზე მეტ უნივერსიტეტთან: 
+თბილისის სახელმწიფო სამედიცინო უნივერსიტეტში 53 კათედრა და 2 კურსია. უნივერსიტეტში მუშაობს 1009 თანამშრომელი, რომელთაგან 557 პროფესორ-მასწავლებელია, 250 დამხმარე პერსონალი, 202 ადმინისტრაციის თანამშრომელი.
+
+უნივერსიტეტში სწავლობს 4094 [[სტუდენტი]]. აქედან ფასიანი სწავლების სექტორზე 1965 სტუდენტია.
+
+სამედიცინო უნივერსიტეტში ფუნქციონირებს სამედიცინო [[კოლეჯი]] და მისი [[ქუთაისი|ქუთაისის]] ფილიალი, ექსპერიმენტული და კლინიკური მედიცინის სამეცნიერო კვლევითი ინსტიტუტი, პათოლოგიის სამეცნიერო-კვლევითი ინსტიტუტი (ქუთაისი), სამეცნიერო ბიბლიოთეკა, , პედაგოგთა კვალიფიკაციის ასამაღლებელი კურსები, ფარმაცევტთა (პროვიზორთა) კვალიფიკაციის ასამაღლებელი კურსები,  მუზეუმი, რამდენიმე კაბინეტი, კულტურის ცენტრი და სტუდიები.
+
+თსსუ-ის გამგებლობაშია მძლავრი მატერიალურ-ტექნიკური ბაზა სასწავლო და სამეცნიერო მუშაობისათვის, სამედიცინო ქალაქის 3 კორპუსი, ფარმაცევტული კორპუსი ცალკე შენობით, სამკურნალწამლო ნივთიერებების წარმოებისათვის, ადმინისტრაციული და ს/კ ინსტიტუტის შენობა, საუნივერსიტეტო ცენტრალური კლინიკა, №1 საუნივერსიტეტო კლინიკა 160 საწოლზე, №2 პედიატრიული კლინიკა 710 საწოლზე, სტომატოლოგიური კლინიკა, ბავშვთა ორი სტომატოლოგიური კლინიკა.
+
+უნივერსიტეტის კათედრები განთავსებულია ქალაქის სხვადასხვა კლინიკების ბაზაზე. თსსუ-ს აქვს სტუდენტთა საერთო საცხოვრებელი 250 ადგილზე, მცირე სტამბა, სპორტული კომპლექსი, ფეხბურთის სტადიონი 2 მინდვრით, 2 სპორტული დარბაზით, ჩოგბურთის ღია და დახურული კორტი, მოედანი სამხედრო წვრთვნისათვის და სასროლეთი, ექსპერიმენტულ ცხოველთა სანაშენო მეურნეობის და კლინიკის შენობა, ფარმაცევტული ფაკულტეტის საცდელი ბოტანიკური ბაღი.
+
+==პარტნიორები==
+===თსსუ-ს  გაფორმებული აქვს ხელშეკრულებები, სხავადასხვა ქვეყნის 30-ზე მეტ უნივერსიტეტთან:=== 
 
 *[[ავსტრია]] – [[გრაცის სამედიცინო უნივერსიტეტი]]; [[ვენის სამედიცინო უნივერსიტეტი]]
 *[[აზერბაიჯანი]] – აზერბაიჯანის სახელმწიფო სამედიცინო უნივერსიტეტი
@@ -27,9 +39,7 @@
 *[[სომხეთი]] – [[ერევნის სამედიცინო უნივერსიტეტი]]. 
 *[[უკრაინა]] - დონეცკის სახელმწიფო სამედიცინო უნივერსიტეტთან
 
- 
-
-თსსუ სრულუფლებიანი წევრია საერთაშორისო ორგანიზაციებისა და ასოციაციებისა:
+===თსსუ სრულუფლებიანი წევრია საერთაშორისო ორგანიზაციებისა და ასოციაციების:===
 
 * [[უნივერსიტეტთა საერთაშორისო ასოციაცია]] (IAU)
 *[[ევროპის უნივერსიტეტთა ასოციაცია]] (EUA)
@@ -37,28 +47,20 @@
 *[[ევროპის სამედიცინო განათლების ასოციაცია]] (AMEE)
 *[[ევროპის მედიკოს სტუდენტთა ასოციაცია]] (EMSA)
 
-თსსუ თანამშრომლობს ორგანიზაციებთან:
+===თსსუ თანამშრომლობს ორგანიზაციებთან:===
 
-[[სამედიცინო განათლების მსოფლიო ფედერაცია]] (WFME)
-UNESCO
-[[უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომისია]] (ECFMG)
-[[შვაიცერის მსოფლიო აკადემია]] (SWA)
-[[მშვიდობისათვის მლოცველთა მსოფლიო საზოგადოება]] (WPPS)
+*[[სამედიცინო განათლების მსოფლიო ფედერაცია]] (WFME)
+*[[იუნესკო]] (UNESCO)
+*[[უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომისია]] (ECFMG)
+*[[შვაიცერის მსოფლიო აკადემია]] (SWA)
+*[[მშვიდობისათვის მლოცველთა მსოფლიო საზოგადოება]] (WPPS)
 
 თსსუ-ის დიპლომი აღიარებულია ჯანდაცვის მსოფლიო ორგანიზაციის, გაერთიანებული ერების ორგანიზაციის, საერთაშორისო სამედიცინო განათლებისა და კვლევის ცენტრის, უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომიტეტის და სხვა საერთაშორისო ორგანიზაციების მიერ, რაც უნივერსიტეტს საერთაშორისო სტატუსს ანიჭებს.
 
-2005 წლის 16 სექტემბერს თსსუ-ს რექტორის მოვალეობის შემსრულებელმა, პროფესორმა ა. თელიამ ბოლონიაში ხელი მოაწერა უნივერსიტეტების დიდ ქარტიას. რის შედეგადაც თსსუ შეუერთდა ბოლონიის პროცესს და გახდა უნივერსიტეტების დიდი ქარტიის წევრი. (MAGNA CHARTA UNIVERSITATUM)
+2005 წლის 16 სექტემბერს თსსუ-ს რექტორის მოვალეობის შემსრულებელმა, პროფესორმა ა. თელიამ ბოლონიაში ხელი მოაწერა [[უნივერსიტეტების დიდი ქარტია|უნივერსიტეტების დიდ ქარტიას]]. რის შედეგადაც თსსუ შეუერთდა ბოლონიის პროცესს და გახდა უნივერსიტეტების დიდი ქარტიის წევრი. (MAGNA CHARTA UNIVERSITATUM)
 
-ამჟამად, თბილისის სახელმწიფო სამედიცინო უნივერსიტეტში 53 კათედრა და 2 კურსია. უნივერსიტეტში მუშაობს 1009 თანამშრომელი, რომელთაგან 557 პროფესორ-მასწავლებელია, 250 დამხმარე პერსონალი, 202 ადმინისტრაციის თანამშრომელი.
 
-უნივერსიტეტში სწავლობს 4094 [[სტუდენტი]]. აქედან ფასიანი სწავლების სექტორზე 1965 სტუდენტი.
-
-სამედიცინო უნივერსიტეტში ფუნქციონირებს სამედიცინო [[კოლეჯი]] და მისი [[ქუთაისი|ქუთაისის]] ფილიალი, ექსპერიმენტული და კლინიკური მედიცინის სამეცნიერო კვლევითი ინსტიტუტი, პათოლოგიის სამეცნიერო-კვლევითი ინსტიტუტი (ქუთაისი), სამეცნიერო ბიბლიოთეკა, , პედაგოგთა კვალიფიკაციის ასამაღლებელი კურსები, ფარმაცევტთა (პროვიზორთა) კვალიფიკაციის ასამაღლებელი კურსები,  მუზეუმი, რამდენიმე კაბინეტი, კულტურის ცენტრი და სტუდიები.
-
-თსსუ-ის გამგებლობაშია მძლავრი მატერიალურ-ტექნიკური ბაზა სასწავლო და სამეცნიერო მუშაობისათვის, სამედიცინო ქალაქის 3 კორპუსი, ფარმაცევტული კორპუსი ცალკე შენობით, სამკურნალწამლო ნივთიერებების წარმოებისათვის, ადმინისტრაციული და ს/კ ინსტიტუტის შენობა, საუნივერსიტეტო ცენტრალური კლინიკა, №1 საუნივერსიტეტო კლინიკა 160 საწოლზე, №2 პედიატრიული კლინიკა 710 საწოლზე, სტომატოლოგიური კლინიკა, ბავშვთა ორი სტომატოლოგიური კლინიკა.
-
-უნივერსიტეტის კათედრები განთავსებულია ქალაქის სხვადასხვა კლინიკების ბაზაზე. თსსუ-ს აქვს სტუდენტთა საერთო საცხოვრებელი 250 ადგილზე, მცირე სტამბა, სპორტული კომპლექსი, ფეხბურთის სტადიონი 2 მინდვრით, 2 სპორტული დარბაზით, ჩოგბურთის ღია და დახურული კორტი, მოედანი სამხედრო წვრთვნისათვის და სასროლეთი, ექსპერიმენტულ ცხოველთა სანაშენო მეურნეობის და კლინიკის შენობა, ფარმაცევტული ფაკულტეტის საცდელი ბოტანიკური ბაღი.
-
+==საზოგადოებრივი/სამეცნიერო საქმიანობა==
 თსსუ რეგულარულად გამოსცემს საერთაშორისო მნიშვნელობის ჟურნალს და სამეცნიერო შრომათა კრებულებს.  სახელმძღვანელოების და სამეცნიერო მონოგრაფიების გამოცემის სტიმულაციის და ხელშეწყობის მიზნით შექმნილია საუნივერსიტეტო საგამომცემლო კომისია, რომელიც ფინანსურ და პოლიგრაფიულ დახმარებას უწევს ავტორებს.
 
 თსსუ-ს აქვს მრავალმხრივი და მრავალფეროვანი სამეცნიერო კონტაქტები, ატარებს საერთაშორისო ფორუმებს, პროგრამულ-გრანტული პრინციპით აფინანსებს სამეცნიერო-კვლევით საქმიანობას.
