*Empty MediaWiki Message*

--- a/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
+++ b/თბილისის_სახელმწიფო_სამედიცინო_უნივერსიტეტი.mw
@@ -1,10 +1,10 @@
-[[სურათი:tsmuview2.jpg|thumb|თბილისის სახელწიფო სამედიცინო უნივერსიტეტი]]
+[[სურათი:tsmuview2.jpg|thumb|250px|თბილისის სახელწიფო სამედიცინო უნივერსიტეტი]]
 '''თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი''' საქართველოში უმაღლესი სამედიცინო განათლებისა  და მეცნიერების უმთავრესი კერაა.  აქ თავმოყრილია საქართველოს სამედიცინო პედაგოგიური და  და სამეცნიერო კადრების საუკეთესო ნაწილი. 
 
 თბილისის სახელმწიფო სამედიცინო უნივერსიტეტი (წარსულში [[ინსტიტუტი]]),  დასაბამს თბილისის ივანე ჯავახიშვილის სახელობის სახელმწიფო უნივერსიტეტის  დაარსებიდან იღებს. უნივერსიტეტის სათავეში [[ქართული საზოგადოების გამოჩენილი მოღვაწეები]] იდგნენ: [[ჯავახიშვილი, ივანე|ივანე ჯავახიშვილი]], [[ცხვედაძე, ნიკო|ნიკო ცხვედაძე]], [[მელიქიშვილი, პეტრე|პეტრე მელიქიშვილი]], [[თაყაიშვილი, ექვთიმე|ექვთიმე თაყაიშვილი]], [[კეკელიძე, კორნელი|კორნელი კეკელიძე]], [[შანიძე, აკაკი|აკაკი შანიძე]] [[და სხვა]]. 
 
 ==ისტორია==
-[[სურათი:univer_old.jpg|thumb|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
+[[სურათი:univer_old.jpg|thumb|250px|ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოება]]
 [[1918]] წლის [[27 თებერვალი|27 თებერვალს]] უნივერსიტეტის პროფესორთა საბჭომ დაადასტურა სამკურნალო ფაკულტეტის შექმნის აუცილებლობა.  17 ივნისს იმავე საბჭომ "[[ქართველ ექიმთა და ბუნებისმეტყველთა საზოგადოების]]” თავმჯდომარის [[ვირსალაძე, სპირიდონ|სპირიდონ ვირსალაძის]] ხელმძღვანელობით, მიიღო გადაწყვეტილება, რათა სექტემბრის თვეში გახსნილიყო საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი. [[1919]] წლის [[9 აპრილი]] უნივერსიტეტის საბჭოს გადაწყვეტილებით, მანამდე ერთად არსებული საბუნებისმეტყველო-სამკურნალო და მათემატიკური ფაკულტეტი ცალკე ფაკულტეტებად გაიყო.
 
 წლების მანძილზე პროფესორ-მასწავლებელთა რაოდენობის ზრდისა  და მათი პროფესიონალიზმის საფუძველზე, შესაძლებელი გახდა სამკურნალო ფაკულტეტის გარდაქმნა დამოუკიდებელ ერთეულად და მისი ჩამოყალიბება  ინსტიტუტად. [[1930]] წლის [[10 ივნისს]] განხორციელდა თბილისის უნივერსიტეტის რეორგანიზება და გაიხსნა ''საქართველოს სახელმწიფო სამედიცინო ინსტიტუტი''. 1992 წელს კი საქართველოს რესპუბლიკის მთავრობის გადაწყვეტილებით, ავტონომიური უნივერსიტეტის სტატუსი მიიღო და ჩამოყალიბდა თბილისის სახელმწიფო სამედიცინო უნივერსიტეტად.
@@ -23,7 +23,7 @@
 უნივერსიტეტის კათედრები განთავსებულია ქალაქის სხვადასხვა კლინიკების ბაზაზე. თსსუ-ს აქვს სტუდენტთა საერთო საცხოვრებელი 250 ადგილზე, მცირე სტამბა, სპორტული კომპლექსი, ფეხბურთის სტადიონი 2 მინდვრით, 2 სპორტული დარბაზით, ჩოგბურთის ღია და დახურული კორტი, მოედანი სამხედრო წვრთვნისათვის და სასროლეთი, ექსპერიმენტულ ცხოველთა სანაშენო მეურნეობის და კლინიკის შენობა, ფარმაცევტული ფაკულტეტის საცდელი ბოტანიკური ბაღი.
 
 ==პარტნიორები==
-===თსსუ-ს  გაფორმებული აქვს ხელშეკრულებები, სხავადასხვა ქვეყნის 30-ზე მეტ უნივერსიტეტთან:=== 
+===ხელშეკრულებები სხვა უნივერსიტეტებთან:=== 
 
 *[[ავსტრია]] – [[გრაცის სამედიცინო უნივერსიტეტი]]; [[ვენის სამედიცინო უნივერსიტეტი]]
 *[[აზერბაიჯანი]] – აზერბაიჯანის სახელმწიფო სამედიცინო უნივერსიტეტი
@@ -39,16 +39,14 @@
 *[[სომხეთი]] – [[ერევნის სამედიცინო უნივერსიტეტი]]. 
 *[[უკრაინა]] - დონეცკის სახელმწიფო სამედიცინო უნივერსიტეტთან
 
-===თსსუ სრულუფლებიანი წევრია საერთაშორისო ორგანიზაციებისა და ასოციაციების:===
-
+===საერთაშორისო ორგანიზაციებისა და ასოციაციების წევრი:===
 * [[უნივერსიტეტთა საერთაშორისო ასოციაცია]] (IAU)
 *[[ევროპის უნივერსიტეტთა ასოციაცია]] (EUA)
 *[[საერთაშორისო განათლების ევროპული ასოციაცია]] (EAIE)
 *[[ევროპის სამედიცინო განათლების ასოციაცია]] (AMEE)
 *[[ევროპის მედიკოს სტუდენტთა ასოციაცია]] (EMSA)
 
-===თსსუ თანამშრომლობს ორგანიზაციებთან:===
-
+===თანამშრომლობა ორგანიზაციებთან:===
 *[[სამედიცინო განათლების მსოფლიო ფედერაცია]] (WFME)
 *[[იუნესკო]] (UNESCO)
 *[[უცხოელ მედიკოს კურსდამთავრებულთა განათლების კომისია]] (ECFMG)
